classDiagram
direction LR

    class Inscrit {
        +int idInscrit
        +String nom
        +String prenom
        +String email
        +String motDePasse
        +String specialisation
        +String tel
        +String niveau_scolaire
        +Date date_naiss
        +String adresse
    }

    class Test {
        +int idTest
        +Date datePassation
        +int duree
        +int resultat
    }

    class Question {
        +int idQuestion
        +String enonce
    }

    class Option {
        +int idOption
        +String texteOption
        +bool estCorrecte
    }

    class Reponse {
        +int idReponse
        +int idInscrit
        +int idQuestion
        +int idOption
        +bool estCorrecte
    }

    Inscrit "1" --> "1" Test 
    Test "*" --> "*" Question 
    Question "1" --> "*" Option 
    Inscrit "1" --> "*" Reponse
    Question "1" --> "*" Reponse
    Option "1" --> "*" Reponse
